--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-
+    
+    <script src="semantic/dist/semantic.js" type='text/javascript'></script>
   </head>
   <body>
     <div id='root'>
